@@ -1,3 +1,7 @@
+2012-02-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* twitter/tweetentry.py: Removed redundant html decoding.
+
 2012-02-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 1.0 release.
